Avoid z-index -1 because it recieves no mouse events

--- a/src/style.css
+++ b/src/style.css
@@ -40,12 +40,13 @@ a:hover {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  z-index: -1;
 }
 
 main {
   background: rgba(255, 255, 255, 0.9);
   padding-bottom: 0.5em;
+  position: absolute;
+  width: 100%;
 }
 
 .javascript-enabled main {
